# llm_quiz_server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  import_bank.py  pyproject.toml  requirements.txt  seed.py
.claude/agents/: quiz-researcher.md  quiz-writer.md
app/: ai.py  auth.py  db.py  importer.py  jobs.py  main.py  scheduler.py  search.py  sources.py  study.py  version.json  version.py
app/static/: style.css
app/study/: 00-welcome.md  wines-of-the-world.md
app/templates/: _macros.html  admin_users.html  analytics.html  base.html  chapter.html  forbidden.html  generate.html  history.html  home.html  import.html  index.html  library.html  node.html  question_edit.html  quiz.html  quiz_feedback.html  quiz_setup.html  results.html  review.html  review_queue.html  study_guide.html  study_list.html  subject.html  tutor.html  who.html
research/arduino-foundations/: 00-diagnosis-and-lesson-plan.md  A-electricity-basics.md  B-circuits.md  C-components.md  D-signals-sensors.md  E-programming.md  F-numbers.md  G-physical-science.md
scripts/: build_arduino_A.py  build_arduino_B.py  build_arduino_C.py  build_arduino_D.py  build_arduino_E.py  build_arduino_F.py  build_arduino_G.py  build_ela_g1.py  build_math_g1.py  dedupe_wset.py  generate-version.sh  verify_node_migration.py  version-bump.sh
